src/test/testData/src/main/resources/META-INF/doma/example/dao/inspection/TestDataCheckDao/bindVariableDirective.sql
INSERT INTO employee
            (employee_id
             , employee_name
             , department_name)
     VALUES ( /* employee.employeeId */0
             , <error descr="Test data is required after a bind variable directive or a literal variable directive">/* employee.employeeName */</error>
             , <error descr="Test data is required after a bind variable directive or a literal variable directive">/* employee.department */</error>)
